# wrmath

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePack.txt  LICENSE.txt  README.rst  update-docs
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile
docs/sphinx/: api.rst  conf.py  index.rst  overview.rst  quaternion.rst  resources.rst  vector.rst
include/wrmath/: filter.h  geom.h  math.h
include/wrmath/filter/: madgwick.h
include/wrmath/geom/: orientation.h  quaternion.h  vector.h
include/wrmath/util/: math.h
include/wrnav/geom/: vector.h
include/wrnav/util/: math.h
src/: madgwick.cc  math.cc  orientation.cc  quaternion.cc
test/: madgwick_test.cc  orientation_test.cc  quaternion_test.cc  vector_test.cc
tools/: euler2quat.cc  quaternion.cc
